# BitParser

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  bitparser.c  stream.c  uparser.c
proto/modbus/: CMakeLists.txt  modbus.c  modbus.h
src/: BitParser.c  BitParser.h  BitParserError.h  CMakeLists.txt  Stream.c  Stream.h  UParser.c  UParser.h
src/unittests/: CMakeLists.txt  test_bit_parser.c  test_stream_big.c  test_stream_little.c  test_u_parser_big.c  test_u_parser_little.c
test_framework/: CMakeLists.txt  unity.h
tests/: CMakeLists.txt  test_bit_parser.c  test_stream_big.c  test_stream_little.c  test_u_parser_big.c  test_u_parser_little.c
unity/: CMakeLists.txt
